--- a/Geography Notes/J1 Geography Notes/11. 服务业——国家经济的催化剂.md
+++ b/Geography Notes/J1 Geography Notes/11. 服务业——国家经济的催化剂.md
@@ -16,10 +16,10 @@
 - 旅游资源
   - \***自然旅游资源**：*热带海滩、森林景观、名山秀水、奇岩怪石等*
   - \***人文旅游资源**：*历史文化古迹、著名工程和建筑物、多元民族风情等*
-- 1990年代以来，马来西亚举办了各种活动以宣传马来西亚
+- 1990年代以来，马来西亚举办了各种活动以**宣传马来西亚**（马购缤走）
   - **马来西亚购物年**
-  - **缤纷马来西亚**
   - **购物嘉年华会**
+  - **缤纷马来西亚**
   - **走遍马来西亚**
 
 ### 发展旅游业的重要性
