--- a/Geography Notes/J1 Geography Notes/6. 增长中的人口.md
+++ b/Geography Notes/J1 Geography Notes/6. 增长中的人口.md
@@ -33,14 +33,13 @@
 
 ## 6.2 人口的增长
 
-- 一个国家最重要的是能促进国家繁荣进步的国民
-- **不利于**人口增长的因素：**疾病传染、战争动乱、自然灾害**等
-- 马来西亚**人口增长的原因**
-  - **经济的发展**
-  - **卫生、医疗条件改善**
-  - **食物充足，营养较佳**
-  - **疟疾等传染病被控制**
-  - **国民寿命延长**
+- 一个国家最重要的是能促进国家繁荣进    步的国民
+- 人口增长受**自然增长率**和**人口的迁移**影响
+- **影响人口自然增长率的因素**
+  - 不利因素：**疾病传染、战争动乱、自然灾害**等
+  - 马来西亚**人口增长的原因**
+    - 随着**经济的发展**，**卫生、医疗条件改善**，**食物充足、营养较佳**，**疟疾等传染病被控制**，使**国民寿命延长**，***人口死亡率逐渐下降，人口增长迅速***
+
 - 马来西亚**人口增长趋势**：***人口死亡率逐渐下降，人口增长迅速***
   - 目前人口数目的变化情况：***出生率降低，死亡率降低***
 - **人口的增长**主要是由***自然增长率***决定的的，其次是***人口的迁移***
