--- a/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
+++ b/Geography Notes/J2 Geography Notes/2 陆地与海洋.md
@@ -48,9 +48,10 @@
 ### **2.2.2 \*陆地的五种基本地形**
 
 - ***山地***
+  - **世界陆地的主要组成部分，陆地的主要地貌**
   - **海拔为500米以上**
   - 世界最高峰：**珠穆朗玛峰**
-
+  
 - ***高原***
   - **海拔较高**，**地面平坦**，**边缘陡峭的广大地区**
   - **“世界屋脊”**：**中国青藏高原**
@@ -60,7 +61,7 @@
 
 - ***盆地***
   - **地形中间低**，**四周被高山包围着**，**形状类似盆**
-  - 例：**非洲中部的刚果盆地**
+  - 例：非洲中部的**刚果盆地**
 
 - ***平原***
   - **分布在大河两岸和海岸附近**，**地势低平**，**海拔50米以下**，**土地肥沃**
