--- a/Geography Notes/J2 Geography Notes/3 移动的大陆.md
+++ b/Geography Notes/J2 Geography Notes/3 移动的大陆.md
@@ -8,7 +8,7 @@
 
   - 他注意到**非洲和南美洲**的边界吻合
 
-  - 大约两亿年前，地球上只有一块大陆，他的周围是广阔的海洋
+  - 大约两亿年前，地球上只有**一块大陆**，他的周围是广阔的海洋
   
   - 经过漫长的岁月，逐渐形成了今天**七大洲四大洋**的分布状况
   
@@ -41,7 +41,7 @@
 
 ![褶曲作用](https://i.ibb.co/7G1MNS6/image.png)
 
-- 当两个**板块相互碰撞**，强大的**挤压力**造成**褶曲作用**，是板块上的**岩层产生褶皱**，形成**褶曲山脉**
+- 当两个**板块相互碰撞**，强大的**挤压力**造成**褶曲作用**，使板块上的**岩层产生褶皱**，形成**褶曲山脉**
 
 - 褶曲作用形成的新褶曲山脉：**喜马拉雅山脉、阿尔卑斯山脉、洛矶山脉、安地斯山脉**
 
