--- a/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
+++ b/Geography Notes/J3 Geography Notes/3. 我们周围的资源.md
@@ -102,7 +102,7 @@
    - 分布在`西南亚、中亚、非洲北部和东部`等**少雨区**，以及`亚欧大陆与北美洲北部`的**寒冷区**
 3. **乳农业**
    - **种植牧草或饲料作物**，饲养乳牛
-   - 由于**乳制品不耐久藏**，所以乳农业地区大多**靠近消费市场**
+   - 由于**<u>乳制品</u>不耐久藏**，所以乳农业地区大多**靠近消费市场**
    - 分布在`西北欧及北美东部`的**人口稠密区**
 
 ### 3.2.3 农牧业带来的问题
