--- a/Geography Notes/J3 Geography Notes/4. 我们周围的能源.md
+++ b/Geography Notes/J3 Geography Notes/4. 我们周围的能源.md
@@ -57,7 +57,7 @@
   - **东南亚地区**
 - 与煤相比，**石油和天然气的优势**
   - **石油和天然气**使用效率比**煤**高
-  - **石油**比**煤清洁**：石油燃烧释放出的二氧化碳和氮氧化物都比煤少
+  - **石油**比**煤清洁**：石油燃烧释放出的二氧化硫和氮氧化物都比煤少
   - 燃烧**天然气**比**石油**更**洁净**、**便宜**
   - 使用效率：**煤** < **石油** < **天然气**
 - **石油和天然气的缺点**
@@ -74,7 +74,7 @@
 - 河道附近**地层稳定**
 - 有**深而窄的河谷**
 - **水位落差**大
-- **水坝后的河谷宽而窄**，有助于储水
+- **水坝后的河谷宽阔**，有助于储    水
 - 河道的**水源全年充足稳定**，河流**常年不结冰**
 
 ### 水力发电的好处
