--- a/Geography Notes/J3 Geography Notes/5 世界大家庭.md
+++ b/Geography Notes/J3 Geography Notes/5 世界大家庭.md
@@ -10,4 +10,87 @@
   - 位于**意大利首都罗马**
   - **政教合一**的国家
   - 全球**天主教徒的信仰中心**
-- 
+- **国界**
+  - **本国与邻国**之间的**界限**
+  - 用来**划分各国之间行使主权的范围**
+  - 有些国家以自然的**山脉、湖泊、河流**为界
+  - 有些国家则以**经纬线**为界
+- **各国如何和平共处**
+  - 互相尊重主权和领土的完整
+  - 互不侵犯
+  - 互不干涉内政
+  - 平等互利
+  - 和平共处
+
+## 5.2 世界的文化
+
+- 文化：语言、宗教信仰、生活习惯、思维方式
+
+- 物质性文化遗产：古迹、艺术品
+
+- |  国家  |  世界著名文化遗产  |
+  | :----: | :----------------: |
+  |  印度  |       泰姬陵       |
+  | 柬埔寨 |       吴哥窟       |
+  | 意大利 |     罗马斗兽场     |
+  |  秘鲁  |      马丘比丘      |
+  |  巴西  |       耶稣像       |
+  |  中国  |      万里长城      |
+  |  澳洲  |     悉尼歌剧院     |
+  |  埃及  | 金字塔、人首狮身像 |
+
+- 非物质文化遗产：语言、宗教、文字
+
+  - 语言
+    - 使用人数最多：汉语
+    - 国际通用语言：英语
+    - 其他常用语：西班牙语、俄语、法语
+  - 按宗教信奉人口排序
+    - 基督教、伊斯兰教、佛教和兴都教
+
+## 5.3 两个世界
+
+- 根据**经济发展水平**和**贫富状况**，可分为**发达国家**和**发展中国家**
+
+- 发达国家
+
+  - 主要分布在欧洲、北美洲、大洋洲
+  - 如：美国、日本、德国、新加坡
+
+- 发展中国家
+
+  - 主要分布在亚洲、非洲和拉丁美洲（美国以南的全部美洲国家与地区）
+  - 经济上比较贫穷，工业基础薄弱，国民平均收入较低
+  - 大多是二战后独立的国家
+
+- 新兴工业化国家
+
+  - 一些发展中国家在某些领域上已经超越了发达国家
+  - 快速的工业发展带动了经济成长，也提高了人民的收入与生活水平
+  - 如：巴西、印度、中国
+
+- |                  | 发达国家                                               | 发展中国家                                 |
+  | ---------------- | ------------------------------------------------------ | ------------------------------------------ |
+  | 人口结构（年龄） | 中、高年龄人口比例较大；儿童人口比例小                 | 儿童人口比例大；高龄人士人口比例小         |
+  | 人口增长率       | 人民多实施家庭计划，出生率和增长率低                   | 受传统观念影响，出生率和增长率高           |
+  | 基本需求         | 粮食充足，卫生和医疗设备完善，人民平均寿命较长         | 粮食不足，医疗设备并不足，人民平均寿命较短 |
+  | 教育程度         | 儿童受教育比例高，文盲率低                             | 文通受教育比例低，文盲率高                 |
+  | 经济活动         | 经济活动以制造业和旅游业为主，大部分人民从事工商业活动 | 农业占主要地位，人民多从事农业活动         |
+
+## 5.4 国家结盟
+
+### 区域性结盟
+
+| 组织                         | 宗旨                                     |
+| ---------------------------- | ---------------------------------------- |
+| 石油输出国组织（欧佩克OPEC） | 保护石油输出国利益                       |
+| 亚太经济合作组织（APEC）     | 推动亚太地区贸易和经济合作               |
+| 欧盟（EU）                   | 追求欧洲和平、建立单一市场、维持永续发展 |
+| 东盟（ASEAN）                | 促进东南亚地区的和平、经济发展和文化合作 |
+
+### 全球性结盟
+
+| 组织                | 宗旨                       |
+| ------------------- | -------------------------- |
+| 联合国（UN）        | 维持世界和平、促进国际合作 |
+| 世界贸易组织（WTO） | 保障国际间自由贸易         |
