--- a/Geography Notes/J3 Geography Notes/6. 世界居民.md
+++ b/Geography Notes/J3 Geography Notes/6. 世界居民.md
@@ -1,2 +1,77 @@
 # 第六章 世界居民
 
+## 6.1 世界人口分布及增长
+
+### 6.1.1 世界人口如何分布？
+
+![2008年世界人口分布图](https://i.ibb.co/sRpcpk3/2008.png)
+
+- 世界**人口分布不均**
+
+- | 人口稠密区         | 人口稀少区                                     |
+  | ------------------ | ---------------------------------------------- |
+  | 多分布在北温带地区 | 极地寒冷区、高山高原区、干旱沙漠区、热带雨林区 |
+
+- 人口大国：中国、印度、美国、印尼
+
+#### 中国
+
+![中国人口分布图](https://i.ibb.co/Nr6L9Tt/image.png)
+
+- 世界上**人口最多**的国家，人口分布**极其不均**
+- 以**黑河——腾冲**为界
+  - 以东人口密度大
+  - 以西人口密度小
+- 中国**人口稠密区**
+  - 华北平原
+  - 四川盆地
+  - 长江三角洲
+  - 珠江三角洲
+
+##### 中国人口分布不均的原因
+
+|          | 中国西部                                                     | 中国东部                                                     |
+| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 自然环境 | 自然环境恶劣。多为高山和荒漠。气候极端，雨量不足。土壤贫瘠，不适宜耕种，以畜牧为主 | 多平原和河谷。气候适宜，雨量充足。土壤肥沃，适合耕作，农业发达 |
+| 地势     | 地势崎岖不平，不利于发展交通和基本建设                       | 地势平坦，适宜发展交通和基本建设                             |
+| 经济     | 经济落后，人民就业机会少                                     | 工商业发达，经济繁荣，人民就业机会多                         |
+
+### 6.1.2 人口的增长
+
+- 人口的增长受人口自然增长和人口迁移的影响
+- 人口自然增长和国家的贫富差距和经济发展水平有关
+  - 最高：非洲
+  - 最低：欧洲
+
+## 6.2 人口结构
+
+![人口金字塔](https://i.ibb.co/QNX6Dr9/image.png)
+
+- 人口金字塔可以表示一个国家**人口的性别和年龄**
+
+- | 发展中国家                               | 发达国家                                   |
+  | ---------------------------------------- | ------------------------------------------ |
+  | 人口金字塔**底部较宽**，**顶部呈尖形**   | 人口金字塔**底部较窄**                     |
+  | 多发展**农业**，**人力需求高，出生率高** | 多发展**工商业**，**生活水平高，出生率低** |
+  | 医疗卫生落后，死亡率高，**平均寿命较短** | 医疗卫生进步，死亡率低，**平均寿命较长**   |
+
+## 6.3 世界人口面对的问题
+
+|            | 发展中国家                                                   | 发达国家                                                     |
+| ---------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 人口问题   | **人口过剩**                                                 | **人口老化**                                                 |
+| 原因       | 工业化带动经济成长，医疗技术逐渐进步，死亡率降低，但出生率高，人口自然增长率高 | 生活水平高、医疗进步、寿命延长、女性劳动人口增加、人民普遍晚婚 |
+| 带来的问题 | 资源不足、粮食短缺、环境污染、人民生活贫穷、环境问题         | 国家劳动力不足、社会负担增加                                 |
+| 解决方式   | 推行节育、实施家庭计划                                       | 鼓励生育、接纳外来移民                                       |
+
+#### 南亚人口居高不下
+
+![南亚人口分布图](https://i.ibb.co/9V491MM/image.png)
+
+- 人口自然增长率居高不下的原因
+  - 南亚受传统文化价值的影响，普遍喜爱大家庭文化
+  - 村民识字率低、节育不普及、农业需要大量劳力
+- 面对的问题
+  - 贫穷，资源不足
+  - 粮食不足：南亚常发生水灾和旱灾
+  - 房屋短缺：大量乡村人口涌入城市求生，城市里常见露宿街头的游民和贫民窟
