--- a/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
+++ b/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
@@ -5,13 +5,16 @@
 ### 10.1.1 通电直导线的磁场
 
 - 丹麦物理学家奥斯特发现了电与磁之间的联系
-  - 当通电的导线靠近小磁针时，小磁针发生了偏转
-- ***电流的磁效应***：*通电直导线的周围有磁场*
-- 
+- 当通电的导线靠近小磁针时，小磁针发生了偏转
+- ***电流的磁效应***(电生磁）：*通电直导线的周围有磁场*
+- 改变电流方向后，发现磁针偏转方向与之前相反
+- 证明**电流的磁场方向**与**电流的方向**有关
 
 #### 安培右手定则
 
+![安培定则](https://i.ibb.co/Hzxjhvm/image.png)
 
+- 螺线管通电后，伸出右手，握着螺线管，四指指着螺线管通电流的方向，拇指所指向的那一段就是螺线管的N极
 
 ### 10.1.2 通电螺旋管的磁场
 
@@ -27,6 +30,7 @@
 
 - ***电磁铁***：内部**插有铁芯的通电螺线管**
 - 电磁铁的磁性与**螺线管的匝数**、**通过线圈的电流大小**有关
+- 通过**控制变量法**进行实验
 - **匝数越多，通过线圈的电流越大，电磁铁的磁性越强**
 - 电磁铁对比永久磁体的优点：**可控性**
   - 通断电流以控制其**磁性**
@@ -65,10 +69,27 @@
 #### 扬声器
 
 - 把**电信号**转换成**声信号**
-- //图
+- ![扬声器结构](https://i.ibb.co/G22C96H/image.png)
 
-？？为什么实验用有机玻璃
+#### 电磁继电器
 
-？？核磁共振有辐射吗
+![电磁继电器](https://i.ibb.co/2sZ8kNq/image.png)
+
+- **电磁继电器**利用了**电磁铁**，让人能**通过低压电路**的开关，**控制高压电路**的通断，确保**安全**
+- 电磁继电器主要由**电磁铁**A、**衔铁**B、**弹簧**C和**动触点**D组成
+- 当低压电源的开关闭合时
+  - 控制电路中有电流通过，电磁铁A产生磁性，吸引衔铁B
+  - 使动触点与红灯触点分离，而与绿灯触点接通
+  - 故红灯熄灭、绿灯亮起，电动机开始工作
+- 当低压电源的开关断开时
+  - 电磁铁A失去了磁性，衔铁B在弹簧C的作用下被拉起
+  - 使动触点与绿灯触点分离，而与红灯触点接通
+  - 故红灯亮起，绿灯熄灭，电动机停止工作
+
+
+
+？？为什么实验用有机玻璃 - 有良好的透明度、良好的绝缘性和机械强度
+
+？？核磁共振有辐射吗 - 核磁共振不需要使用射线，对人体没有辐射伤害
 
 ？？moodle
