--- a/Science Notes/J2 Science Notes/9. 指南针为什么能指南北.md
+++ b/Science Notes/J2 Science Notes/9. 指南针为什么能指南北.md
@@ -4,7 +4,7 @@
 
 ### 9.1.1 磁性和磁体
 
-- ***磁性***：物质能够吸引铁、镍、钴等物质的性质
+- ***磁性***：物质能够吸引*铁、镍、钴等物质*的性质
 - ***磁体***：具有磁性的物体
   - **磁石**：*天然*磁体【主要成分：Fe~3~O~4~】
   - **生活及生产中使用**的是*人工制造*的磁体【大多使用铁钴镍等金属，或某些氧化物】
@@ -25,6 +25,10 @@
 - 磁体之间相互作用的规律
   - **同名磁极相互排斥**
   - **异名磁极相互吸引**
+- 区分两根外形完全相同的钢棒，其中的一根有磁性，另一根无磁性。
+  - 将钢棒A的一端接触另一根钢棒B的中部，若吸力很大，则钢棒A有磁性，B无磁性；若吸力很弱，则钢棒B有磁性，A无磁性
+  - 解析：钢棒的磁极在两端，磁性最弱的地方是中部，所以若吸力很大，则证明钢棒A的两端是磁极，钢棒A具有磁性
+
 
 ### 9.1.3 磁化与去磁
 
@@ -64,25 +68,26 @@
   - 将装有强磁铁的擦拭布放在玻璃的内测
   - 通过移动磁铁带动铁板同步运动，以同时清洁窗户玻璃内外表面
 - **干簧管**
-  - //图片
+  - ![干簧管](https://i.ibb.co/vwW4QZG/image.png)
   - 一种**磁控开关**
   - 玻璃管内有两片靠得很近的铁质弹簧片
-  - 磁体靠近时，两片弹簧片被磁化，获得磁性，靠近的两端因产生异名磁极而相吸，使电路导通
+  - **磁体靠近时，两片弹簧片被磁化**，获得磁性，靠近的两端因产生**异名磁极而相吸**，使**电路导通**
   - 磁体离开后，弹簧片的弹性使电路断开
 - 磁性画板
 
 ## 9.2 磁场和磁场线
 
 - 任意磁体都会在周围激发一个磁场
-- **磁体通过*磁场***对周围的铁质材料或其他磁体**产生磁力作用**
-- 可以通过磁体周围的铁质材料或其他磁体的受力，感受到磁场的存在
+- **磁体通过*磁场***对周围的铁质材料 或其他磁体**产生磁力作用**
 - **磁场有方向**，<u>小磁针</u>静止时**北极所指的方向**为所在位置的**磁场方向**
 
 ### 磁场线
 
-- 根据铁屑的排列状况，通过一些**带箭头的曲线**，形象的描述**磁体周围的磁场分布**
-- //各种磁铁的磁场线图
+- 可以通过磁体周围的铁质材料或其他磁体的受力，感受到磁场的存在
+- 根据铁屑的排列状况，通过一些**带箭头的曲线**，直观的描述**磁体周围的磁场分布**
+- ![磁场线](https://i.ibb.co/yyD6sfX/image.jpg)
 - 磁场线总是从磁体的北极出来，回到磁体的南极【**北出南进**】
+- 磁场线**互不相交**
 - 可描述磁场的**方向**：磁场线上的箭头表示的方向
 - 可描述磁场的**强弱**：**磁场线密的地方磁场强，疏的地方磁场弱**
 
@@ -90,16 +95,23 @@
 
 ### 9.3.1 地磁场
 
-- //图
-- 地球是一个**巨大的磁体**
+- ![地磁场](https://i.ibb.co/FYMCkrM/image.png)
+- 地球像条形磁铁，是一个**巨大的磁体**
 - 地球的北极在地理南极附近；地磁的南极在地理北极附近
+- 地磁南北极和地理北南极并不重合，他们之间有夹角
 - ***地磁场***：地球产生的磁场
 
 ### 9.3.2 指南针
 
 - 古代中国人所发明的**司南**是指南针的始祖
-- //使用指南针，判断转的角度。。。。
-- //原理。
+- ![指南针判断方向](https://i.ibb.co/NVcZt09/image.png)
+- 北偏西20°
+  - 从正北方向向正西方向偏移20°
+  - 相等于西偏北70°
+
 
 ### 生物体与磁场
 
+- 许多动物具有识别地磁场的能力
+- 这些动物体内含有磁性物质，帮他们认路
+- 外界“磁环境”对生物的生命活动有一定的影响
