--- a/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
+++ b/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
@@ -4,17 +4,11 @@
 
 ### 10.1.1 通电直导线的磁场
 
-- 丹麦物理学家奥斯特发现了电与磁之间的联系
+- 丹麦物理学家**奥斯特**发现了电与磁之间的联系
 - 当通电的导线靠近小磁针时，小磁针发生了偏转
 - ***电流的磁效应***(电生磁）：*通电直导线的周围有磁场*
 - 改变电流方向后，发现磁针偏转方向与之前相反
 - 证明**电流的磁场方向**与**电流的方向**有关
-
-#### 安培右手定则
-
-![安培定则](https://i.ibb.co/Hzxjhvm/image.png)
-
-- 螺线管通电后，伸出右手，握着螺线管，四指指着螺线管通电流的方向，拇指所指向的那一段就是螺线管的N极
 
 ### 10.1.2 通电螺旋管的磁场
 
@@ -23,13 +17,19 @@
   - 通电螺线管内插铁芯，铁芯被磁化，在其周围产生磁场，方向与通电螺线管相同，两个磁场相互叠加，使磁场增强
 - **通电螺线管的磁场**与**条形磁铁的磁场**很**相似**
 - 改变**通电的方向**，**螺线管的磁极**也会发生**改变**
-- //图
-- //找实验or视频
+
+#### 安培右手定则
+
+![安培定则](https://i.ibb.co/Hzxjhvm/image.png)
+
+- 螺线管通电后，伸出右手，握着螺线管，四指指着螺线管通电流的方向，**拇指所指向的那一段就是螺线管的N极**
 
 ### 10.1.3 影响电磁铁磁性强弱的因素
 
+- ![电磁铁](https://i.ibb.co/ZJ3JHH9/image.png)
 - ***电磁铁***：内部**插有铁芯的通电螺线管**
-- 电磁铁的磁性与**螺线管的匝数**、**通过线圈的电流大小**有关
+- 电磁铁只有在通电的时候才具有磁性
+- 电磁铁的磁性与**螺线管的匝(za[1])数**、**通过线圈的电流大小**、**有无铁行**有关
 - 通过**控制变量法**进行实验
 - **匝数越多，通过线圈的电流越大，电磁铁的磁性越强**
 - 电磁铁对比永久磁体的优点：**可控性**
@@ -86,10 +86,19 @@
   - 使动触点与绿灯触点分离，而与红灯触点接通
   - 故红灯亮起，绿灯熄灭，电动机停止工作
 
+### 通电导线在磁场中会受力
 
+- 通电导线在磁场中将受到力的作用，力的方向与电流方向及磁场方向有关
+- **电动机**正是利用这一原理制成的
+  - 电脑 ——> 机械能
+
+## 10.3 电磁感应
+
+- ***电磁感应***（磁生电）：**闭合电路**的一**<u>部分</u>导体**在磁场中做**切割磁场线**的运动时，导体中会**产生电流**【***感应电流***】
+-  利用这个原理可制成**发电机**
+  - 机械能 ——> 电脑
+- 
 
 ？？为什么实验用有机玻璃 - 有良好的透明度、良好的绝缘性和机械强度
 
 ？？核磁共振有辐射吗 - 核磁共振不需要使用射线，对人体没有辐射伤害
-
-？？moodle
