--- a/Science Notes/J2 Science Notes/9. 指南针为什么能指南北.md
+++ b/Science Notes/J2 Science Notes/9. 指南针为什么能指南北.md
@@ -13,7 +13,7 @@
 
 - 磁体上，不同位置的磁性强弱不同
 - ***磁极***：**磁性最强**的区域
-- *任何磁铁都有两个磁极*【**N极，S极**】，磁极一定是成对出现的
+- *任何磁铁都有**两个磁极***【**N极，S极**】，磁极一定是成对出现的
   - 断裂后的磁体依旧会具有磁性和两个磁极，不过磁力可能会下降
 
 - **条形磁铁**的磁极在它的**两端**
@@ -22,7 +22,7 @@
   - ***北极/N极***：磁体指北的磁极
   - ***南极/S极***：磁体指南的磁极
 - 磁力：磁铁与磁体之间存在力的应用
-- 磁体之间相互作用的规律
+- 磁体之间**相互作用**的规律
   - **同名磁极相互排斥**
   - **异名磁极相互吸引**
 - 区分两根外形完全相同的钢棒，其中的一根有磁性，另一根无磁性。
@@ -53,6 +53,8 @@
   - 用磁体的南极或北极，**沿物体向一个方向摩擦几次**
   - 在物体上绕上绝缘导线，**通入直流电**，经过一段时间后取下即可
   - 使**物体与磁体吸引**，一段时间后物体将具有磁性
+  
+- 不要乱磁化东西，会弄坏电器，如手表
 
 #### 去磁
 
@@ -77,7 +79,7 @@
 
 ## 9.2 磁场和磁场线
 
-- 任意磁体都会在周围激发一个磁场
+- 任意磁体都会在周围激发 一个磁场
 - **磁体通过*磁场***对周围的铁质材料 或其他磁体**产生磁力作用**
 - **磁场有方向**，<u>小磁针</u>静止时**北极所指的方向**为所在位置的**磁场方向**
 
@@ -88,7 +90,8 @@
 - ![磁场线](https://i.ibb.co/yyD6sfX/image.jpg)
 - 磁场线总是从磁体的北极出来，回到磁体的南极【**北出南进**】
 - 磁场线**互不相交**
-- 可描述磁场的**方向**：磁场线上的箭头表示的方向
+- **磁场**是**真实存在**的，有强弱和方向之分；**磁场线**不真实存在，是**假想的**，方便形象的**描述磁场**
+- 可描述磁场的**方向**：磁场线上的**箭头表示的方向**
 - 可描述磁场的**强弱**：**磁场线密的地方磁场强，疏的地方磁场弱**
 
 ## 9.3 地磁场和指南针
@@ -97,7 +100,7 @@
 
 - ![地磁场](https://i.ibb.co/FYMCkrM/image.png)
 - 地球像条形磁铁，是一个**巨大的磁体**
-- 地球的北极在地理南极附近；地磁的南极在地理北极附近
+- *地球的北极在地理南极附近；地磁的南极在地理北极附近*
 - 地磁南北极和地理北南极并不重合，他们之间有夹角
 - ***地磁场***：地球产生的磁场
 
@@ -113,5 +116,6 @@
 ### 生物体与磁场
 
 - 许多动物具有识别地磁场的能力
-- 这些动物体内含有磁性物质，帮他们认路
+-  这些动物体内含有磁性物质，帮他们认路
 - 外界“磁环境”对生物的生命活动有一定的影响
+
