蛤wtf明天考地理？？？

--- a/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
+++ b/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
@@ -96,7 +96,7 @@
 
 - ***电磁感应***（磁生电）：**闭合电路**的一**<u>部分</u>导体**在磁场中做**切割磁场线**的运动时，导体中会**产生电流**【***感应电流***】
 -  利用这个原理可制成**发电机**
-  - 机械能 ——> 电脑
+  - 机械能 ——> 电能
 - 
 
 ？？为什么实验用有机玻璃 - 有良好的透明度、良好的绝缘性和机械强度
