--- a/Science Notes/J2 Science Notes/11. 家庭用电.md
+++ b/Science Notes/J2 Science Notes/11. 家庭用电.md
@@ -2,5 +2,78 @@
 
 ## 11.1 家庭用电
 
+### 11.1.1 家庭电路的组成
+
 ![家庭电路](https://i.ibb.co/yFstNRL/image.png)
+
+- 发电厂 ——> 进户线 ——> 电能表 ——> 总开关 ——> 保险丝 ——> 用电器
+- 电能是从**发电厂**通过电网输送到家里的
+- 每家每户都有**两根进户线**：***火线 & 中线***（零线） ，之间的**电压为220V**【家用电压】
+- 两根进户线会经过***电能表***以**统计消耗的电能**
+- 接下来连到***总开关***
+  - 有的家庭电路中使用的总开关是**闸刀开关**，**总开关闭合时闸刀朝上**，若闸刀闭合时朝下，修理电路时闸刀易收到干扰而向下闭合，造成危险
+  - 总开关与电能表顺序不能调换，若调换，会有人绕过电能表直接从开关接电线偷电
+- 总开关后还会接着**保险丝/断路器/熔断器**，在电流过大时切断电路以**保证安全** 
+  -  总开关和保险丝的位置也不能调换，否则在更换保险丝时会有触电的风险
+  - 现代居民楼里多使用空气开关作为保护，若电路中电流超过额定电流就会自动断开【跳闸】
+- 后面就可以**用电器**
+  - 家用电器一般接在**插座**上
+  - 插座有**两条导线**，**一条连接火线，一条连接中线**
+  - 用电器都是**并联**的，其中一个断开不会影响其他用电器的工作‘
+
+### 11.1.2 火线、中线及其识别方法
+
+- 家庭电路的电压为**220V**，这个电压就是**火线与中线之间的电压**
+- 由于中线与地面相连，所以也可以说火线与大地之间的电压为220V
+- 而**中线与地面之间没有电压**
+
+#### 测电笔
+
+![测电笔](https://i.ibb.co/WsQdcyc/image.png)
+
+- 为了安全的进行电路操作，人们需要使用测电笔以**区分火线和中线**
+- 测电笔的**两端都是金属**，可以看作一个**电路**，中间有**电阻**，与氖管串联，**氖管**中有氖气，**氖气可以导电**，**有电流**通过时，**氖管会发光**
+- 使用时，**<u>手需接触笔尾部的金属体</u>**，形成通路
+  - 笔尖接触火线时氖管会发光；接触中线时不会发光
+- 现代，市面上也出现了**电子测电笔**，除了可用于区分火线中线，还具有显示屏，显示**电路的的电压值**
+
+## 11.2 熔断器和断路器
+
+### 11.2.1 电流中电路过大的原因
+
+- **用电器的总功率过大**
+- **发生短路**
+  - 火线和中线之间连接
+- 电流过大会造成导线在短时间内会产生大量热，易引起火灾，因此需要保护措施
+
+## 11.2.2 熔断器
+
+- 空气开关：电流过大时会自动跳闸
+- 保险丝接在进户的火线上，是一根电阻较大，熔点较低的导线
+  - 当通过保险丝的电流超过额定电流，达到熔断电流时，保险丝就会熔断，从而切断电路
+- 保险丝**熔断电流**需**略大于额定电流**
+
+## 11.3 地线
+
+- 电器漏电：由于电器导线的绝缘收到损坏等原因，造成电器带电
+- 用电器体积比较大时，外壳很容易搭上火线，发生漏电
+- 尤其是金属外壳的电器，人在接触外壳的时候会发生触电事故
+- 将用电器与地线相连能有效地防止电器漏电造成的危害
+
+### 11.3.2 三角插头
+
+- 家庭电路的连法
+  - 左零右火上接地  
+  - 开关需与用电器串联，接在用电器与火线之间
+
+## 11.4 安全用电
+
+- 电对人体的伤害与**电流的大小**及通过人体所**持续的时间**有关
+- 人体皮肤干燥时电阻为10000Ω、皮肤潮湿时电阻为1000Ω
+  - 皮肤潮湿时通过人体的电流会大大增加，所以手潮湿的时候最好不要接触电路
+- 安全电压：不高于36V的电压
+
+### 11.4.2 触电类型
+
+
 
