ah i my eyes are going to close itself

--- a/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
+++ b/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
@@ -86,6 +86,10 @@
   - 使动触点与绿灯触点分离，而与红灯触点接通
   - 故红灯亮起，绿灯熄灭，电动机停止工作
 
+#### 电铃
+
+- 开关闭合时，电磁铁就有了磁性，把簧片上的衔铁吸引过来，簧片下端的小锤在铃上打一下。与此同时，因为衔铁与螺钉脱离接触，电路被断开，电磁铁失去磁性， 不能吸引衔铁，在簧片作用下衔铁被弹回来，又与螺钉接触，电路又被接通，铃声又响。电流就这样一通、一断，电铃就不停地响
+
 ### 通电导线在磁场中会受力
 
 - 通电导线在磁场中将受到力的作用，力的方向与电流方向及磁场方向有关
@@ -98,7 +102,3 @@
 -  利用这个原理可制成**发电机**
   - 机械能 ——> 电能
 - 
-
-？？为什么实验用有机玻璃 - 有良好的透明度、良好的绝缘性和机械强度
-
-？？核磁共振有辐射吗 - 核磁共振不需要使用射线，对人体没有辐射伤害
