--- a/Science Notes/J2 Science Notes/11. 家庭用电.md
+++ b/Science Notes/J2 Science Notes/11. 家庭用电.md
@@ -6,10 +6,10 @@
 
 ![家庭电路](https://i.ibb.co/yFstNRL/image.png)
 
-- 发电厂 ——> 进户线 ——> 电能表 ——> 总开关 ——> 保险丝 ——> 用电器
+- 发电厂 ——> 进户线 ——> 电能表 ——> 总开关 ——> 保险丝 ——> 用电器/插座
 - 电能是从**发电厂**通过电网输送到家里的
-- 每家每户都有**两根进户线**：***火线 & 中线***（零线） ，之间的**电压为220V**【家用电压】
-- 两根进户线会经过***电能表***以**统计消耗的电能**
+- 每家每户都有**两根进户线**：***火线（L） & 中线（N）***（零线） ，之间的**电压为220V**【家用电压】
+- 两根进户线会经过***电能表***以**测量用电量**
 - 接下来连到***总开关***
   - 有的家庭电路中使用的总开关是**闸刀开关**，**总开关闭合时闸刀朝上**，若闸刀闭合时朝下，修理电路时闸刀易收到干扰而向下闭合，造成危险
   - 总开关与电能表顺序不能调换，若调换，会有人绕过电能表直接从开关接电线偷电
@@ -19,29 +19,44 @@
 - 后面就可以**用电器**
   - 家用电器一般接在**插座**上
   - 插座有**两条导线**，**一条连接火线，一条连接中线**
-  - 用电器都是**并联**的，其中一个断开不会影响其他用电器的工作‘
+  - 用电器都是**并联**的，其中一个断开不会影响其他用电器的工作
+
+|     物件      |        用途        |
+| :-----------: | :----------------: |
+|    电能表     |     测量用电量     |
+|     开关      |   控制电路的通断   |
+| 熔断器/断路器 |      保护电路      |
+|     插座      | 为可移动的电器供电 |
 
 ### 11.1.2 火线、中线及其识别方法
 
 - 家庭电路的电压为**220V**，这个电压就是**火线与中线之间的电压**
 - 由于中线与地面相连，所以也可以说火线与大地之间的电压为220V
 - 而**中线与地面之间没有电压**
+  - 但中线仍有电流流过
+  - 人体不会被电是因为中线有没电压，而人体电阻远大于零线本身，电流大部分经过中线进入了大地，只有很小的一部分电流流过人体
+
 
 #### 测电笔
 
 ![测电笔](https://i.ibb.co/WsQdcyc/image.png)
 
-- 为了安全的进行电路操作，人们需要使用测电笔以**区分火线和中线**
+- 为了安全的进行电路操作，人们需要使用***测电笔***以**区分火线和中线**
 - 测电笔的**两端都是金属**，可以看作一个**电路**，中间有**电阻**，与氖管串联，**氖管**中有氖气，**氖气可以导电**，**有电流**通过时，**氖管会发光**
 - 使用时，**<u>手需接触笔尾部的金属体</u>**，形成通路
-  - 笔尖接触火线时氖管会发光；接触中线时不会发光
+  - 笔尖接触**火线**时**氖管会发光**；接触**中线**时**不会发光**
 - 现代，市面上也出现了**电子测电笔**，除了可用于区分火线中线，还具有显示屏，显示**电路的的电压值**
+- 若使用测电笔检测零线时氖管发光，则证明零线断开了
+  - 当零线断开时，它与真正的零线已脱离，断点之后的所谓的零线事实上通过用电器与火线相连通，这样就造成了断点之后的零线已变成了火线，所以就出现"用测电笔检测零线时氖管发光"的现象
+
 
 ## 11.2 熔断器和断路器
 
 ### 11.2.1 电流中电路过大的原因
 
-- **用电器的总功率过大**
+- **电路超载**
+  - 用电器的总功率过大
+
 - **发生短路**
   - 火线和中线之间连接
 - 电流过大会造成导线在短时间内会产生大量热，易引起火灾，因此需要保护措施
@@ -49,31 +64,85 @@
 ## 11.2.2 熔断器
 
 - 空气开关：电流过大时会自动跳闸
-- 保险丝接在进户的火线上，是一根电阻较大，熔点较低的导线
-  - 当通过保险丝的电流超过额定电流，达到熔断电流时，保险丝就会熔断，从而切断电路
-- 保险丝**熔断电流**需**略大于额定电流**
+- 熔断器的主体是**保险丝**，由**熔点较低的金属**（如*铝锑合金*）制成
+- 保险丝接在进户的**火线**上，是一根**电阻较大，熔点较低**的**导线**
+- 保险丝的**额定电流**：保险丝正常工作时允许通过的最大电流
+- 当通过保险丝的电流超过额定电流，达到熔断电流时，保险丝就会**熔断**，从而**切断电路**
+- 保险丝的**额定电流**需**等于或稍大于**电路中**正常工作时的最大电流**
 
 ## 11.3 地线
 
-- 电器漏电：由于电器导线的绝缘收到损坏等原因，造成电器带电
+- **电器漏电**：由于电器或导线的绝缘层受到损坏等原因造成电器带电的状态
 - 用电器体积比较大时，外壳很容易搭上火线，发生漏电
-- 尤其是金属外壳的电器，人在接触外壳的时候会发生触电事故
-- 将用电器与地线相连能有效地防止电器漏电造成的危害
+- 尤其是**金属外壳的电器**，人在接触外壳的时候会发生**触电**事故
+- ![电器未接地漏电](https://i.ibb.co/94L40Ly/image.png)
+  - 电器虽放在地面上，但并没有接地，因为干燥的地表导电性差，而且电器通常用橡胶或塑料支在地面上
+  - 当电器外壳和火线接触而发生漏电时，由于电器外壳与地表之间的电阻较大，因此火线入地漏电电流较小，不足以把保险丝熔断
+  - 一旦人体触摸到电器外壳，火线、洗衣机、人、大地之间就构成了一条电流通路，就有电流通过人体流入地面危及人的安全
 
-### 11.3.2 三角插头
+- 将用电器与***地线***相连能有效地**防止电器漏电造成的危害**
+- ![电器接地漏电](https://i.ibb.co/nRzD3sv/image.png)
+  - 若将二脚插头改为三角插头，多一条地线，其一段与深埋于地底的金属体相连，另一端与电器外壳相连，电器外壳就得以良好接地
+  - 一旦外壳与火线接触而带电，火线、电器的金属外壳、地线、大地之间就会构成一个通路，产生很大的漏电电流，足以使熔断器的保险丝熔断，或使断路器跳闸而切断电源，消除了对人的潜在危险
+
+
+### 11.3.2 三脚插头
 
 - 家庭电路的连法
   - 左零右火上接地  
   - 开关需与用电器串联，接在用电器与火线之间
 
+![三孔插座](https://i.ibb.co/PwRbGr2/image.png)
+
+- 大型用电器除了接火线和中线外还要接地线，因此在家庭电路中为这些电器供电需采用**三孔插座**
+- 左插脚L和右插脚N是电器电机的引出线，需分别与电源的火线和中线连接
+- 上方插脚E则应该连接电器的金属外壳，插头插入插座后，**电器的外壳和地线就会相连**
+
+#### 国际三脚插头导线颜色的规定
+
+![三角插头的接线](https://i.ibb.co/rtXXhr6/image.png)
+
+- 火线（L）—— 棕色
+- 中线（N）—— 蓝色
+- 地线（E）—— 黄绿色条纹
+
 ## 11.4 安全用电
 
-- 电对人体的伤害与**电流的大小**及通过人体所**持续的时间**有关
-- 人体皮肤干燥时电阻为10000Ω、皮肤潮湿时电阻为1000Ω
-  - 皮肤潮湿时通过人体的电流会大大增加，所以手潮湿的时候最好不要接触电路
-- 安全电压：不高于36V的电压
+### 11.4.1 安全电压
+
+- 人体是一个导体，电对人体的伤害与**电流的大小**及**通电时间的长短**有关
+
+  - | 电流大小 | 危害                                             |
+    | :------- | :----------------------------------------------- |
+    | 1mA      | 使人产生麻的感觉                                 |
+    | 10mA     | 人会感到痛苦而挣脱电源                           |
+    | 30mA     | 人会感到剧痛、甚至神经麻痹、呼吸困难，有生命危险 |
+    | 100mA    | 3s可使人窒息，心跳停止                           |
+  - 电流越大，从触电到死亡的时间越短
+
+- 通过人体的**电流的大小**与人体**电阻的大小**以及加载人体上的**电压大小**有关
+
+  - ***安全电压***：**不高于36V的电压**
+  - **人体皮肤干燥的时候电阻较大，皮肤潮湿时电阻较小**
+    - 皮肤潮湿时通过人体的电流会大大增加，所以手潮湿的时候最好不要接触电路
+
 
 ### 11.4.2 触电类型
 
 
 
+#### 鸟儿不会触电的原因
+
+1. 鸟儿的电阻相较导线电阻较大，而电流会优先从电阻较小的地方流过，因此经过小鸟身体的电流非常微弱，微弱到根本无法伤害小鸟的身体
+
+- 电流是由移动的电子形成的，这些移动的电子会被电压驱使
+
+- 灯泡本身是一个用电器，会有很大的电阻，两端会有极大的电压差，流过灯泡的电流是很大的，因此鸟儿会触电
+
+- 小鸟的两条腿都站在上面，那么在小鸟的两腿之间，会不会产生电压差，进而利用小鸟的身体充当导体，产生回路，最后导致电流通过？
+
+  　　问题很好，一个一个回答。会不会有电压差？会有，但是小鸟的两条腿能跨开多远？所以在这么短的距离上，电压差几乎可以忽略不计。如果一定算有，其数值也是非常小。那么在这样的限定下，我们来回答第二个问题，会不会产生回路，进而产生电流？我们知道小鸟的身体确实可以当导体，至少它不是绝缘体，那么，既然有了一个极小的电压，又有了小鸟的身体连接，就算产生了回路，进而产生了电流。假设高压线的电压是35千伏，小鸟自身的电阻是1000欧，小鸟两腿间的距离是5厘米，那么通过小鸟身体的电流就在零点几毫安之内，如此低的电流，根本不会对小鸟造成任何伤害，更不要说电死它了。
+
+- 由于小鸟站在一根高压线上，因此其身体可以看作是电路的一个支路，并且是与两爪子之间的导线并联的，由于其身体的电阻远远大于两爪子之间导线的电阻阻值，因此，根据中学物理电学中的欧姆定律可以求出经过小鸟身体的电流非常微弱，微弱到根本无法伤害小鸟的身体
+
+- 
