--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -74,6 +74,8 @@
 
 ## 2.3 变异
 
+### 2.3.1 变异的类型
+
 - ***变异***：**同一物种内不同个体之间的差异**
 
 |                          可遗传变异                          |                       不可遗传变异                       |
@@ -92,4 +94,25 @@
 
 #### 基因突变
 
-- 
+- 脱氧核糖核酸分子上的**某个位点发生了改变**
+- **新的突变基因取代了原本的基因**，**后代就会出现其祖先从未有过的新性状**
+- 多数基因突变是有害的，有些基因突变不会对生物造成太大的影响
+- 人类的基因突变有些事自然发生的，有些是环境诱发的
+  - 诱变剂（提高基因的突变率）
+    - 物理因素：X射线、激光、紫外线、放射性元素
+    - 化学因素：亚硝酸盐、黄曲霉
+    - 生物因素：病毒和细菌
+
+##### 镰刀型贫血症
+
+- 红细胞由正常的圆饼形变成镰刀型
+- 红细胞不能顺利通过毛细血管，造成贫血
+- 原因：控制血红蛋白分子合成的基因结构发生了改变，导致血红蛋白分子的结构发生了改变
+
+##### 动物的白化现象
+
+- 原因：控制皮肤黑色素合成的基因发生了改变，动物皮肤由于缺乏黑色素而百化
+
+### 2.3.2 可遗传变异的作用
+
+- 每
