--- a/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
+++ b/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
@@ -1,2 +1,12 @@
 # 第三章 生物的演化
 
+## 3.1 地球上生命的起源
+
+1. 神创论
+2. 陨石
+3. 化学起源假说
+   - 细胞是构成生命体的最小单位
+     - 蛋白质构成了细胞的主要成分
+     - 氨基酸构成蛋白质
+     - 无机物构成了氨基酸
+   - 
