--- a/Science Notes/J3 Science Notes/book2/1. 物种的多样性.md
+++ b/Science Notes/J3 Science Notes/book2/1. 物种的多样性.md
@@ -13,56 +13,81 @@
 - 林奈把生物分类系统确定为七个等级
   - 种、属、科、目、纲、门、界
 - 生物的**学名**
+  - 避免混乱和便于科学交流
   - 学名由两个**拉丁文**表示
   - 学名 = **属名**【首字母大写】 + **种名** + （命名人的姓氏）
   - 例：<u>**H**omo</u> <u>sapiens</u> / ***H**omo* *Sapiens*
+  
 
 ## 1.2 二叉式检索表的制作和应用
 
+- 现代科学家普遍认为应该以**生物的形态结构和生物间的亲缘关系**作为标准来建立生物分类系统
 - 二叉：有没有、会不会、能不能
+- 对**形态、生理和分布区特征**进行分析
 
 ## 1.3 生物的分类系统
 
 - 分类法：选择某一个或几个特征进行分类
 - 魏泰克提出***五界分类系统***
   - 原核生物界、原生生物界、真菌界、植物界、动物界
+- 不属于动物界、真菌界、植物界的生物，若**有细胞核**则是**原生生物界**、**无细胞核**则为**原核生物界**
+- **原核生物**：细菌 & 其他原核生物
+  - **没有核膜包被，不具有成型的细胞核**
+
+- **真核生物**：动物、植物、真菌 & 原生生物
+  - 细胞中的**遗传物质有核膜包被**，具有成型的**细胞核**
+
 
 ### 原核生物界
 
-- 没有细胞核
-- 单细胞生物
-- 把有机物分解成无机物
-- 例：细菌（有益：乳酸杆菌、有害：肉毒杆菌）
+- 没有核膜包被，**不具有**成型的**细胞核**
+- 都是**单细胞生物**，以**细菌**和**蓝细菌**为主
+- 通过**分裂繁殖**繁殖后代
+- 曾是地球上唯一的生命形式
+- 能**把有机物分解成无机物**
 
 ### 原生生物界
 
 - 有细胞核
-- 有单细胞生物、多细胞生物
-- 例子
-  - 像动物会移动的：变形虫
-  - 像植物可进行光合作用：藻类
-  - 像动物有像植物：眼虫（有叶绿体、鞭毛、细胞核）
+- 大部分是**单细胞生物**
+- 例：细菌（有益：乳酸杆菌、有害：肉毒杆菌）
+- 似**植物**：具有**细胞壁**，可以进行**光合作用**，如衣藻等**单细胞藻类**
+- 似**动物**：如**变形虫**、**草履虫**等单细胞原生生物
+- 既**像植物又像动物**：如**眼虫**，**有鞭毛能运动**，也有**叶绿体**可以**合成有机物**
 
 ### 真菌界
 
-- 有菌丝，用于吸取营养
-- 无叶绿体，无法进行光合作用
-- 无法移动
-- 例：菇类、面包霉、木耳、
+- **无叶绿体，无法进行光合作用**
+- 有菌丝，用于**从活的生物或生物遗体中吸收养分**
+- 大部分真菌是多细胞生物
+- 能把生物的遗体和排泄物分解掉
+- 单细胞真菌：酵母菌
+- 多细胞真菌：香菇、木耳等食用菌、青霉菌
+- 真菌引起的疾病：灰指甲
+- 具有剧毒的真菌：毒蕈(xùn)
 
 ### 植物界
 
-- 有叶绿体、可进行光合作用
+- 多细胞真核生物
+- 细胞外**有纤维素组成的细胞壁**
+- 成熟的**细胞中**常有**较大的液泡**
+- 有**叶绿体**、可**进行光合作用制造有机物**
 - 无法自由移动
 - 例：大红花、椰树
 
 ### 动物界
 
+- 多细胞真核生物
 - 可自由移动、除了珊瑚虫
-- 养分从环境中获得
+- **通过摄食获取有机物**
 - 例：老虎、大象、狗
 
-tips
+### 三域系统
 
-- 不属于动物界、真菌界、植物界的生物，若有细胞核则是原生生物界、无细胞核则为原核生物界
-
+- ”域“是比”界“高一级的分类系统
+- 三域系统把地球上的所有生物分别归入细菌域、古细菌域和真核生物域
+- **区分原核生物界中的古细菌和一般细菌**
+- 真核生物域保留真核生物的四个界：原生生物界、植物界、动物界、真菌界
+- 至今还在地球上生活的古细菌
+  - 极端嗜热菌
+  - 极端嗜酸菌
