--- a/Geography Notes/J1 Geography Notes/1. 认识地图.md
+++ b/Geography Notes/J1 Geography Notes/1. 认识地图.md
@@ -22,4 +22,57 @@
 ## 地图的要素
 
 - 地图的基本要素：指向标、注记、比例尺、图框和图名
-- 
+
+#### 指向标
+
+- 箭头通常指向北方
+- 在地图上，要根据指向标确定方向
+
+#### 图例
+
+![地图中常见图例](https://i.ibb.co/KsxttyK/image.jpg)
+
+- 图例是地图中用来表示河流、建筑物、铁路等地理事物的各种符号和注释
+- 图例的符号有两种：自然景观 & 人文景观
+  - 自然景观：地形、水系、天然植物
+  - 人文景观：人类的生活和生产中制造的事物，如建筑物、园丘、交通路线等
+
+#### 注记
+
+- 地图上用来标注山脉、河流、国家、城市等地理事物名称的文字，以及表示陆高、海深等数据的数字
+
+| 注记  | 地理事物            |
+| ----- | ------------------- |
+| B.P.  | 警察局(Balai Polis) |
+| Ldg.  | 大圆丘(Ladang)      |
+| Hosp. | 医院(Hospital)      |
+| Kg.   | 乡村(Kampung)       |
+| P.P.  | 邮政局(Pejabat Pos) |
+| Sek.  | 学校(Sekolah)       |
+| Sg.   | 河流(Sungai)        |
+| Tg.   | 岬角(Tanjung)       |
+| Bt.   | 山峰(Bukit)         |
+
+#### 比例尺
+
+- 地图可以反映大范围内的地理事物，我们把各种地理事物按一定比例缩小
+
+##### 比例尺的三种形式
+
+- 文字式：1厘米(cm)代表1公里(km)
+- 分数式：1:10000; 1/10000
+- 直线式：
+
+##### 比例尺的转换
+
+- xx
+
+## 1.4 大比例尺和小比例尺
+
+|                | 大比例尺     | 小比例尺        |
+| -------------- | ------------ | --------------- |
+| 范围           | 小           | 大              |
+| 内容           | 详细         | 简单            |
+| 例子           | 市区图       | 世界地图        |
+| 比例尺上的数字 | 小（1：200） | 大（1：200000） |
+
