--- a/Geography Notes/J1 Geography Notes/8. 四通八达的交通.md
+++ b/Geography Notes/J1 Geography Notes/8. 四通八达的交通.md
@@ -102,3 +102,43 @@
 
 ## 8.2 通讯拉近你我之间的距离
 
+- 现代化的通讯科技将全球各地的重要资讯连接在一起，不同文化之间的交流更加简易和频繁
+- 电话是目前最多、最广的通讯设备
+  - 马来西亚电讯公司（TM）提供国内和国际的通话服务
+- 无线通讯服务让人们能享受视讯通话、留言、录像、发送电邮等便利
+- 电脑使得文字、数据、影像、图片等资料，可以大量储存和运用
+- 国际互联网使人们可以查询各种资料和信息，也可以在网上进行娱乐、游戏、即时通讯、购物等
+
+### 人造卫星的应用
+
+![马来西亚主要地面收发站](https://i.ibb.co/Mf2hsKy/image.png)
+
+- 人造卫星能在太空拍摄清晰的照片，传回地球
+- 对国家的气象、监督环境污染、海域、军事等都有很大的帮助
+- 浮罗交怡、马六甲、关丹、三马当、纳闽都设有地面收发站
+
+## 8.3 多媒体超级走廊
+
+- 多媒体超级走廊北起吉隆坡双峰塔，南至吉隆坡国际机场
+
+### 多媒体超级走廊主要计划
+
+1. 电子政府
+
+   所有政府部门的行政和管理都由互联网串联，以进行更有效的联系，带领我国走向无纸张政府的新纪元
+
+2. 电子医疗
+
+   采用多媒体设备，传送一些高显像的X光图及其他资料，让医生对病人的病情作远程判断，改进乡区医疗
+
+3. 精明学校
+
+   配合我国资讯与通讯工艺(ICT)发展，进行网上教学，注入资讯工艺(IT)知识，以栽培更多科技工艺人才
+
+4. 多元用途精明卡
+
+   推出拥有身份证、驾驶执照、护照及一触即通等功能的大马卡
+
+5. 电子商务
+
+   商家可以通过互联网办理商务注册、货品进出口文件等手续
