--- a/Geography Notes/J3 Geography Notes/2. 读图解图.md
+++ b/Geography Notes/J3 Geography Notes/2. 读图解图.md
@@ -17,4 +17,14 @@
 - 通过等高线值可得知地表的高度
 - 通过等高线的分布形态得知地形的种类
 - 通过等高线的疏密得知坡度的陡缓
-- 
+
+![等高线1](https://i.ibb.co/m06NrjT/1.png)
+
+![等高线2](https://i.ibb.co/mJh9c1R/2.png)
+
+### 2.2.2 土地利用判读
+
+- 根据地图中的聚落、交通用地、耕地、工业用地等的分布，可以了解该地区土地利用的状况
+- 聚落形态可以反映聚落机能
+  - 农业集散中心：农业区内的聚落
+  - 交通中心/工商业中线：交通网络密集的聚落
