--- a/Geography Notes/J1 Geography Notes/8. 四通八达的交通.md
+++ b/Geography Notes/J1 Geography Notes/8. 四通八达的交通.md
@@ -95,6 +95,7 @@
 
 - 我国最大的国际机场：吉隆坡国际机场（KLIA）
 - 我国主要的航空公司：马来西亚航空公司、亚洲航空公司
+- 半岛机场集中在西海岸
 - 东马航空的重要性
   - 辅助公路和铁路上的不足
   - 联系内陆地区和主要城市
@@ -142,3 +143,4 @@
 5. 电子商务
 
    商家可以通过互联网办理商务注册、货品进出口文件等手续
+
