gave up liao, saya pergi tidur

--- a/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
+++ b/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
@@ -2,11 +2,64 @@
 
 ## 3.1 地球上生命的起源
 
-1. 神创论
-2. 陨石
-3. 化学起源假说
-   - 细胞是构成生命体的最小单位
-     - 蛋白质构成了细胞的主要成分
-     - 氨基酸构成蛋白质
-     - 无机物构成了氨基酸
-   - 
+- 早期的地球是一个炽热的星球，温度很高，不可能有生命存在
+
+1. 神创论：生命失神地创造
+
+2. **化学起源假说**
+
+   ![米勒实验](https://i.ibb.co/5MB0C20/image.png)
+
+   - 根据米勒的实验：在生命起源之初的原始大气中只有**甲烷、氢气、氨气和水蒸气**，**没有氧气**。把这些气体泵入一个封闭的装置进行火花放电【闪电】，一段时间后发现其中产生了一些**氨基酸**
+   - 无机物 ——> 氨基酸 ——> 蛋白质
+   - **蛋白质**是构成细胞的主要成分，而细胞是构成生命体的最小单位
+   - 但这不能证明生命的起源
+     - 原始生命物质 ≠ 原始生命
+     - 米勒所假设的气体不能被证明就是原始大气的成分
+
+3. 宇宙胚种论
+
+  - 人们在一颗陨石中发现了并非来自地球的氨基酸
+  - 天文学家在星际空间中也发现了数十种有机物
+  - 有科学家提出，地球上的生命来自宇宙中的其他星球
+
+- 有机物是生命起源的基础
+
+- 原始大气中没有氧气，**有机物有可能在*原始海洋*中累积**
+- 在原始海洋里有一定条件下，***蛋白质和核酸*等物质长期积累**，经过浓缩、凝聚等作用，可**形成多种分子组成的体系**
+- 这个**体系的外面有一层膜将其内部与海水隔开**，再经历演化，在**原始海洋**里形成了***原始生命***
+- 化学演化的过程：
+  - 无机小分子物质 —生成—> 有机小分子物质 —形成—> 有机大分子物质 —组成—> 多分子体系 —演变—> 原始生命
+
+## 3.2 生物演化的证据
+
+- **达尔文**著作**《物种起源》**种提出了**生物演化论**
+- 过度繁殖 ——> 生存斗争 ——> 遗传与变异 ——> 适者生存
+
+### 3.2.1 化石
+
+- *化石是在**地层中**保留下来的**古代生物的遗体，遗物和遗迹***
+- 例：动物的骨骼，牙齿，蛋、贝壳、植物的茎叶、动物留下的足印
+- **化石为生物的演化提供了最直接的证据**
+
+### 3.2.2 化石告诉我们什么
+
+- 从**始祖马**体形大小如同狐狸、前肢有四趾的特征，可推测它**不适于奔跑而适于跳跃**，因而可能生化在**草丛或灌木丛**中
+- 当气候逐渐变得干燥时，大片森林成为草原，原先生活在森林灌木丛中的始祖马，在草原上难以藏身，只有**跑得快的马才能适应环境的变化**
+- 随着时间的推移，马的体型逐渐变得高大，马的前肢由四趾变为三趾，最后变为单趾并具有蹄，这样的变化使马更适应在**草原上快速奔跑**，由此可推测出现代马的生活环境是**辽阔的草原**
+- ***一、化石证明了物种是发展变化的***
+
+- 在世界许多地方都发现了**恐龙化石**
+- 恐龙这样曾经兴旺发达过的生物会灭绝是**不能适应环境变化的结果**
+- ***二、化石证明在地球上曾经生活过的许多生物，在漫长的地质年代里绝灭了***
+
+- ***三、生物是沿着从水生到陆生，从简单到复杂的方向发展的。这种发展变化被称为生物的演化***
+- 鱼类 ——> 两栖类 ——> 爬行类 ——> 哺乳类/鸟类
+- **始祖鸟化石**：处于爬行类和鸟类过渡类型，证明现代鸟类和爬行类都是从古代爬行类动物演化而来的
+- ***四、化石证明，现代生物是由古代生物演化而来的，因此在现代生物之间存在着亲缘关系***
+- 早期科学家通过**观察化石生物的形态结构特征**来**推测生物间的亲缘关系**
+- 现在，科学家已开始通过**比较生物的脱氧核酸和蛋白质的差异**，来**推测其相互间的亲缘关系**
+- 对于生物的演化，科学家从比较**解剖学、胚胎学、生物化学**等方面提出了许多证据
+
+## 3.3 生物演化的原因
+
