--- a/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
+++ b/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
@@ -63,3 +63,23 @@
 
 ## 3.3 生物演化的原因
 
+- **达尔文《物种起源》**用**自然选择学说**解释**物种演化的原因**
+
+### 3.3.1 生物演化的原因是自然选择
+
+#### 桦尺蠖的演变
+
+- 桦尺蠖是一种飞蛾，它们在夜间活动，白天栖息在树干上
+- 1850年考察发现，大多数桦尺蠖成虫体色呈灰色，少数呈黑色，黑色是灰色的突变类型
+- 1950年考察发现，随着工业化的发展，煤烟把灰色的树干熏黑，导致灰色的桦尺蠖成了少数
+- 灰色类型的桦尺蠖在黑色树干上易被鸟类捕食；而黑色则因煤烟的掩护免遭鸟类捕食，得以生存和发展
+- 这证明**桦尺蠖的两种体色比列变化是自然选择的结果**
+
+### 3.3.2 自然选择学说的内容
+
+- ***过度繁殖***：地球上的各种生物普遍具有很强的繁殖能力，能够产生大量的后代
+- ***生存斗争***：事实上每种生物的后代能够生存下来的却不多，因为生物赖以生存的食物和空间有限，任何生物要生存下去，就得为获取足够的食物和空间进行生存斗争
+- ***遗传和变异***：具有有利变异的个体，容易在生存斗争中生存下来并繁殖后代，将有利变异遗传给下一代【若变异为可遗传变异】；具有不利变异的个体会被淘汰
+- 在生存斗争中，***适者生存***、不适者淘汰
+- 达尔文自然选择学说的主要观点包括**过度繁殖、生存斗争、遗传和变异、适者生存**
+- 生物**通过变异、遗传和自然选择**，在漫长的岁月里不断演化，现在的地球上的物种就是这样形成的
