--- a/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
+++ b/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
@@ -19,14 +19,19 @@
 
 3. 宇宙胚种论
 
-  - 人们在一颗陨石中发现了并非来自地球的氨基酸
-  - 天文学家在星际空间中也发现了数十种有机物
-  - 有科学家提出，地球上的生命来自宇宙中的其他星球
+     - 人们在一颗陨石中发现了并非来自地球的氨基酸
+
+     - 天文学家在星际空间中也发现了数十种有机物
+
+     - 有科学家提出，地球上的生命来自宇宙中的其他星球
+
+
+- 米勒实验说明原始大气具有形成有机物的条件
 
 - 有机物是生命起源的基础
 
 - 原始大气中没有氧气，**有机物有可能在*原始海洋*中累积**
-- 在原始海洋里有一定条件下，***蛋白质和核酸*等物质长期积累**，经过浓缩、凝聚等作用，可**形成多种分子组成的体系**
+- 在原始海洋里有一定条件下，***蛋白质和核酸*【原始生命的关键物质】等物质长期积累**，经过浓缩、凝聚等作用，可**形成多种分子组成的体系**
 - 这个**体系的外面有一层膜将其内部与海水隔开**，再经历演化，在**原始海洋**里形成了***原始生命***
 - 化学演化的过程：
   - 无机小分子物质 —生成—> 有机小分子物质 —形成—> 有机大分子物质 —组成—> 多分子体系 —演变—> 原始生命
@@ -82,4 +87,13 @@
 - ***遗传和变异***：具有有利变异的个体，容易在生存斗争中生存下来并繁殖后代，将有利变异遗传给下一代【若变异为可遗传变异】；具有不利变异的个体会被淘汰
 - 在生存斗争中，***适者生存***、不适者淘汰
 - 达尔文自然选择学说的主要观点包括**过度繁殖、生存斗争、遗传和变异、适者生存**
-- 生物**通过变异、遗传和自然选择**，在漫长的岁月里不断演化，现在的地球上的物种就是这样形成的
+- 生物**通过变异、遗传和自然选择**，在漫长的岁月里**不断演化**，现在的地球上的物种就是这样形成的
+
+#### 综合演化论
+
+- 综合演化论 = 自然选择学说 + 生物学其他分支学科的新成就
+
+1. 生物演化的基本单位**不是生物个体**，而**是种群**
+2. 基因和染色体等**遗传物质的变异**是生物演化的基础
+3. **自然选择决定演化的方向**，生物对环境的适应性是长期自然选择的结果
+4. **隔离导致新物种的形成**。长期的地理隔离使一个物种分化成多个亚种，亚种在各自不同的环境下进一步隔离，可能会形成新的物种
