--- a/Science Notes/J3 Science Notes/book2/4. 星与星系.md
+++ b/Science Notes/J3 Science Notes/book2/4. 星与星系.md
@@ -3,3 +3,102 @@
 ## 4.1 星
 
 ### 4.1.1 天上的星星
+
+- 夜空中的**星星绝大多数是恒星**，太阳也是一颗恒星
+- 白天看不见星星的原因：在白天，**太阳光**一部分被地球**大气散射**，把**天空**照得十分**明亮**，我们就**看不见星星发出的光**了
+- 太阳光被地球大气所散射，也是**天空看上去呈蓝色**的原因
+- **没有大气的天空**（如月球）是黑漆漆的，**白天也能见到星星**
+- 白天可以看到的星星：太阳、月亮，金星和木星
+- ***视星等***：在地球观测到的**星星的明暗程度**
+  - ***视星等越小，星星越亮***
+  - **6等星是肉眼可见的最暗的星**
+  - **天狼星**是**夜空中最亮的恒星**，视星等为 **-1.44**
+  - **太阳的**视星等是 **-26.7**
+
+### 4.1.2 认识天上的星星
+
+- **古代星座**：天空中几颗**亮星连接成的想象图象**
+
+  - 古代巴比伦人为了便于认识星星，把天空中的一些亮星用想象的线连接起来，并赋予神话中的形象，称之为星座
+  - 古代希腊人把天空分成48个星座
+  - 古代中国人把天空划分为“二十八宿”
+
+- 现代天文学把全天划分为**88个区域**，现代**星座**就是指这些**天上的区域**
+
+- 为了便于认识星座，就把一些亮星连接起来，并想象出一定的图形
+
+- 北斗七星位于大熊座 //图片
+
+- 星空划分为**南天星空**与**北天星空**
+
+- 北天亮星
+
+  |     亮星     |    星座    |
+  | :----------: | :--------: |
+  |  **大角星**  | **牧夫座** |
+  |  **织女星**  | **天琴座** |
+  |  **牛郎星**  | **天鹰座** |
+  | **轩辕十四** | **狮子座** |
+  |    五车二    |   御夫座   |
+  |    参宿四    |   猎户座   |
+
+- 南天亮星
+
+  |    亮星    |     星座     |
+  | :--------: | :----------: |
+  | **天狼星** |  **大犬座**  |
+  | **南门二** | **半人马座** |
+  | **参宿七** |  **猎户座**  |
+  |   老人星   |  南十字座？  |
+  |   角宿一   |    室女座    |
+  |   心宿二   |    天蝎座    |
+
+### 4.1.3 恒星的亮度、温度和颜色
+
+![image-20220831130348471](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220831130348471.png)
+
+- 地球上观测到的**恒星的明亮程度**取决于：
+
+  - 恒星的**真实亮度**
+  - 恒星**与地球的距离**
+
+- 光谱研究发现，**恒星的表面颜色**与**温度**、**物质组成特性**有密切联系
+
+  - | 颜色                 | 温度        | 组成物质                           |
+    | -------------------- | ----------- | ---------------------------------- |
+    | 蓝白色和白色         | 6000-10000K | 离子化及中性的氦                   |
+    | 黄白色               | 5200-6000K  | 离子化的金属及中性金属             |
+    | 黄橙色、橙红色、红色 | 低于5200K   | 中性金属或分子(如钛)，氢的成分很少 |
+
+  - 颜色越浅，表面温度越高；颜色越深，表面温度越低
+
+## 4.2 恒星的演化
+
+### 4.2.1 恒星的诞生
+
+- 由**气体和尘埃**组成的**星云**是**恒星诞生的场所**
+- ![image-20220831131633830](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220831131633830.png)
+- **太阳系八大行星绕太阳公转的平面大多接近同一平面**
+
+#### 康德——拉普拉斯星云说
+
+- **太阳系是由一块*星云*在收缩形成的**，星云中的气体和尘埃在**引力作用下**向中心聚集，在圆盘中心聚集了星云绝大部分的质量。圆盘先形成的是太阳系中心的**太阳**，然后，剩余的星云物质进一步收缩演化，形成地球等**行星**
+- **星云**：是由**气体和尘埃物质**组成的**巨大云雾状天体**。直径大，可达十几光年
+
+### 4.2.2 恒星演化的过程
+
+- 恒星的**质量大小**决定了它的**寿命长短**
+  - 质量越大，寿命越短
+  - 质量越小，寿命越长
+- 小质量恒星 → 红巨星(星体急剧扩大) → 行星状星云 → 白矮星(体积小密度高) → 黑矮星(肉眼看不见)
+- 大质量恒星 → 红超巨星 → 超新星 → 中子星(质量稍小的恒星)/黑洞(质量更大的恒星)
+- **黑洞**不是洞，是一个**密度巨大**，**引力巨大**的天体，任何物质，甚至**光**都无法逃脱他的吸引
+
+## 4.3 星系
+
+- 在银河系外面，还有众多像银河系一样的星系，称为**河外星系**
+- 依据其外观形态分为
+  - **椭圆星系**：比较年老的星系，只有少量的气体尘埃，年轻的恒星也很少
+  - **螺旋星系**：有明显的盘状结构和旋臂，旋臂上的恒星诞生率很高，如银河系
+  - **不规则星系**：一般是混乱的，没有旋臂结构可能因星系之间发生碰撞，受到引力的作用而破坏变形
+- 
