--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -9,6 +9,10 @@
   - 耳垂、卷发、卷舌、食指长短、酒窝、色觉、扁平足
 - **遗传现象：生物体通过生殖把自己的相对性状世世代代传递下去**
 - 遗传：动词；遗传现象：名词
+- 一种性状可以由一对的相关基因所控制，因此一种性状会有相对的两种情形
+  - 一个为显性（dominance）
+  - 另一个隐性（recessive）
+
 
 ### 2.1.2 染色体与生物的遗传有关
 
@@ -23,7 +27,6 @@
 - 人的**每个体细胞**中都有**46条（23对）染色体**
   - 除精子卵子外的细胞都是体细胞
 
-
 #### 细胞分裂
 
 - 分为两大类
@@ -33,9 +36,10 @@
 ![有丝分裂](https://i.ibb.co/Z2Kwkbc/image.png)
 
 - 作用：产生新的体细胞，供生长发育需要，取代老去或死去的细胞
-- 真核生物的**体细胞分裂**时，每个染色体都会**复制成两个一样的染色体**，排列在细胞的中央
-- 在丝状物质（纺锤体产生的纺锤丝）的牵引下，分成同样的两组，分别进入**两个子细胞**
-- 经过有丝分裂，***子细胞和母细胞的染色体数量保持不变***
+- **真核生物**的**体细胞分裂**时，每个染色体都会**复制成两个一样的染色体**，排列在细胞的中央
+- 在丝状物质（纺锤体产生的纺锤丝）的牵引下，分成**同样的两组**，分别进入**两个子细胞**
+- 经过**有丝分裂**，***子细胞和母细胞的染色体数量保持不变***
+- 有丝分裂：细胞分裂的过程当中，有丝状体的出现
 
 ##### 减数分裂
 
@@ -43,32 +47,37 @@
 
 - 作用：产生生殖细胞细胞【精子和卵子】，供繁殖所需
 - 真核生物**通过减数分裂产生生殖细胞**
-- 染色体只复制一次，细胞连续分裂两次
-- 形成的生殖细胞中的染色体数目，比体细胞中的减少了一半
-- 子细胞的染色体数量 = 二分之一母细胞的染色体
+- **染色体只复制一次，细胞连续分裂两次**
+- 形成的生殖细胞中的**染色体数目**，比体细胞中的**减少了一半**
+  - 子细胞的染色体数量 = 二分之一母细胞的染色体
+
 - 精卵的染色体数量为23条
 - 46 -> 92 -> 46 ->  23
 - 一个母细胞会分裂成四个子细胞
-- 减数分裂可以使亲代和子代的染色体数量和种类保持高度稳定
 
 #### 真核生物的生殖
 
+- 通过**减数分裂、受精作用和有丝分裂**，在生物体代代相传的过程中，亲代与子代生物体细胞内的**染色体数量和种类**就保持着高度的**稳定**
+  
 - 真核生物由体细胞通过**有丝分裂产生生殖细胞**，雌雄**生殖细胞**在**受精作用**过程中**结合形成受精卵**，**受精卵**通过**有丝分裂产生新个体**
   - 受精卵（精卵结合）经过非常多次的分裂，形成很多细胞，每个细胞细胞在经过生长后分化成不同的细胞，例：神经细胞、肌肉细胞、上皮细胞、血细胞
 
 - **受精卵**中**一半染色体来自父亲，另一半来自母亲**
+
+- **新个体的细胞中**中**一半染色体来自父亲，另一半来自母亲**
+
+- **受精卵** —有丝分裂—> **新个体** —减数分裂—> **雌雄生殖细胞** —结合—> **受精卵**
 
 ## 2.2 遗传性状的决定
 
 ### 2.2.1 人的性别决定
 
 - 人的体细胞中共有46条染色体，可配成23对
-- 当中最后一对是最特别的，被称为**性染色体**
-- 每一个体细胞的染色体有一半是父亲的，另一半时母亲的
-- 体细胞有46条染色体，而生殖细胞有22条染色体+1条性染色体
+- 其中1至22对的染色体在男性与女性中都是一样，叫做**常染色体**（autosome）
+- 另一对是**决定性别**的**性染色体**（sex chromosome）
 - 人体的**性别**是由**性染色体**决定的
-- **女性**的一对性染色体形态、**大小相似**；**男性**的一对性染色体形态、**大小不同**
-- **女性性染色体为XX**；**男性性染色体为XY；**
+- **女性**的一对**性染色体形态、大小相似**，既**XX**
+- **男性**的一对**性染色体形态、大小不同**， 即**XY**
 - 从性染色体的角度看，男性产生的**精子**有X和Y**两种**，而女性产生的**卵子**只有**一种**，X
 - 精子和卵子结合形成**受精卵**，可能形成**两种组合**：XX & XY，因此**生男生女的机会是均等的**
 - 人体的**性别**主要是由**父亲决定**，因为只有父亲有Y性染色体，会影响最终组合
@@ -82,33 +91,31 @@
 ### 2.2.2 基因和DNA
 
 - 孟德尔：八年豌豆实验，发现生物遗传的基本规律
-- 约翰逊：**染色体是基因载体**
+- 约翰逊：提出了基因概念
+- 摩尔根：果蝇的遗传实验，**染色体是基因载体**
 - 沃森 & 克里克：脱氧核糖核酸双螺旋结构模型
 - 基因 ——> DNA ——> 染色体
-
-#### 基因
-
-- 脱氧核糖核酸分子上**起遗传作用的片段**
-
-- 记录和传递遗传信息
-
-- **指导蛋白质的合成**
-- **控制生物体的性状**
-- 基因在分裂时会**缠绕形成染色体**
+- ***基因决定遗传性状，染色体是基因的载体***
 
 #### 脱氧核糖核酸（DNA）
 
 - 一种**大分子化合物**
 - **相对分子质量很大**（在百万以上）
 - 分子呈**双螺旋结构**
-- **每条染色体只含有一个脱氧核糖核酸分子**，染色体复制后有两个脱氧核糖核酸分子
-- 每个脱氧核糖核酸分子上**可以有多个基因**
+- **每条染色体只含有一个脱氧核糖核酸分子**，**染色体复制后有两个脱氧核糖核酸分子**
+
+#### 基因
+
+- 脱氧核糖核酸分子上**起遗传作用的片段**
+- 每个脱氧核糖核酸分子**(DNA)上可以有多个基因**
+- 记录   和传递遗传信息
+- 通过**指导蛋白质的合成**，进而**控制生物体的性状特征**
 
 ## 2.3 变异
 
 ### 2.3.1 变异的类型
 
-- ***变异***：**同一物种内不同个体之间的差异**
+- ***变异***：**<u>同一物种内</u>不同个体之间的差异**
 
 |                          可遗传变异                          |                         不可遗传变异                         |
 | :----------------------------------------------------------: | :----------------------------------------------------------: |
@@ -129,12 +136,14 @@
 - 是**可遗传变异**
 - *脱氧核糖核酸分子上*的**某个位点发生了改变**
 - **新的突变基因取代了原本的基因**，**后代就会出现其祖先从未有过的新性状**
-- 多数基因突变是有害的，有些基因突变不会对生物造成太大的影响
+- **多数基因突变**是**有害**的，有些基因突变**不会对生物造成太大的影响**
 - 人类的基因突变有些事自然发生的，有些是环境诱发的
   - 诱变剂（提高基因的突变率）
     - **物理因素**：X射线、激光、紫外线、放射性元素
     - **化学因素**：亚硝酸盐、黄曲霉
     - **生物因素**：病毒和细菌
+  - 因此导致的性状变异，便**会遗传**
+  - 应该**避免接触这些诱变因素**，方体内细胞发生病变
 
 ##### 镰刀型贫血症（有害）
 
@@ -148,32 +157,43 @@
 
 ### 2.3.2 可遗传变异的作用
 
-- 每种生物都可能发生变异
+- 每种生物都**可能发生变异**
 - **有利变异**：有利于生物的生存
   - 如：小麦抗倒伏、抗锈病
 
 - **不利变异**：不利于生物的生存
   - 如：玉米的白化苗
 
-- 有利变异的不断产生对于物种的生存和繁衍有非常重要的意义
+- **有利变异**的不断产生对于物种的**生存和繁衍**有非常重要的意义
+  - 生物不变异，就**不能适应不断变化的环境**
+  - 若没有可遗传变异，就**不会产生新的生物类型**，就没有地球上生物物种的多样性
+
 - **变异**为**物种多样性**的形成提供了一个基本条件
 - **农业生产**中广泛利用各种有利变异
+  - 通过射线照射、药物处理、将作物种子送入太空等手段，使物种的遗传物质发生改变
+  - 这些种子发育成的植株/后代中，会出现各种各样的变异，从中选出对人类有益的变异，就能得到农作物的**新品种**
+
 
 ### 2.2.3 转基因技术
 
-- 运用科学手段从某种生物中**提取所需的基因**，将其**转入另一种生物中**，使它与这种生物的**基因进行重组**，从而**改变**其**遗传特性**
+- 转基因技术（遗传工程）：运用科学手段从某种生物中**提取所需的基因**，将其**转入另一种生物中**，使它与这种生物的**基因进行重组**，从而**改变**其**遗传特性**
+- 遗传工程是科学家用人工的方法，将两种生物的基因组合，同时大量地生产新组合的基因
 - 可以**改变生物的遗传性状**，培育**新物种**
-- 可能会对人的健康和环境产生影响
+- 育种：对**农作物**进行**杂交**，对**家畜**做**交配**工作，以取得更好的农作物和家畜的品种
+- 转基因食品存在争议
+  - 赞同：能提高生活水平
+  - 反对：安全性未确定，可能会对人的健康和环境产生影响
+
 
 ### 2.3.4 生命的统一性
 
-- **生物的遗传物质**都属于**同一类大分子化合物**
+- **生物的遗传物质**都属于**同一类大分子化合物**【核酸，包括DNA & RNA】
 - 生物体都由**细胞**构成，细胞是**生物体结构和功能的基本单位**
 - **碳氢氧氮**是生物体内的**基本元素**
 - **蛋白质**是生物体内组成各种**生命结构**及完成各种**生理功能**的主要物质
 - 大多数**酶**都是**蛋白质**
 - 生物体的内部都在**不断进行物质和能量的转化**，能**与外界环境不断进行物质和能量的交换**（例：光合作用 & 呼吸作用）
-- *生物在具有多样性的同时，还具有统一性*
+- *生物在具有**多样性**的同时，还具有**统一性***
 
 
 
