--- a/Science Notes/J3 Science Notes/book2/4. 星与星系.md
+++ b/Science Notes/J3 Science Notes/book2/4. 星与星系.md
@@ -96,9 +96,19 @@
 
 ## 4.3 星系
 
+### 4.3.1 星系的种类
+
+- **银河系**是由数千亿颗**恒星**和众多的**星云**组成
 - 在银河系外面，还有众多像银河系一样的星系，称为**河外星系**
 - 依据其外观形态分为
   - **椭圆星系**：比较年老的星系，只有少量的气体尘埃，年轻的恒星也很少
   - **螺旋星系**：有明显的盘状结构和旋臂，旋臂上的恒星诞生率很高，如银河系
   - **不规则星系**：一般是混乱的，没有旋臂结构可能因星系之间发生碰撞，受到引力的作用而破坏变形
+
+### 4.3.2 银河系
+
 - 
+
+### 4.3.2 天体系统和宇宙
+
+![image-20220831135259917](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220831135259917.png)
