--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -126,7 +126,7 @@
 
 - **骡子**(63)是由**马**(64)和**驴**(62)**杂交**而得的
 - **唐氏综合症**
-  - 是由**染色体数目改变**引起的
+  - 是由**染色体数目改变**引起的，不是基因突变
   - 患儿智力低下并伴有其他多种并发症
   - 原因：**第21条染色体有3条**
   - 又称**21三体综合症**
@@ -154,6 +154,10 @@
 ##### 动物的白化现象（无害）
 
 - 原因：**控制皮肤黑色素合成的基因**发生了改变，动物皮肤由于缺乏黑色素而百化
+
+##### 癌症（有害）
+
+
 
 ### 2.3.2 可遗传变异的作用
 
