--- a/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
+++ b/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
@@ -74,7 +74,7 @@
 
 #### 桦尺蠖的演变
 
-- 桦尺蠖是一种飞蛾，它们在夜间活动，白天栖息在树干上
+- 桦尺蠖(huò)是一种飞蛾，它们在夜间活动，白天栖息在树干上
 - 1850年考察发现，大多数桦尺蠖成虫体色呈灰色，少数呈黑色，黑色是灰色的突变类型
 - 1950年考察发现，随着工业化的发展，煤烟把灰色的树干熏黑，导致灰色的桦尺蠖成了少数
 - 灰色类型的桦尺蠖在黑色树干上易被鸟类捕食；而黑色则因煤烟的掩护免遭鸟类捕食，得以生存和发展
