--- a/Science Notes/J3 Science Notes/book2/4. 星与星系.md
+++ b/Science Notes/J3 Science Notes/book2/4. 星与星系.md
@@ -29,6 +29,8 @@
 
 - 北斗七星位于大熊座 //图片
 
+- 从地球上看**北极星的位置常年不变**
+
 - 星空划分为**南天星空**与**北天星空**
 
 - 北天亮星
@@ -55,8 +57,6 @@
 
 ### 4.1.3 恒星的亮度、温度和颜色
 
-![image-20220831130348471](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220831130348471.png)
-
 - 地球上观测到的**恒星的明亮程度**取决于：
 
   - 恒星的**真实亮度**
@@ -77,38 +77,61 @@
 ### 4.2.1 恒星的诞生
 
 - 由**气体和尘埃**组成的**星云**是**恒星诞生的场所**
-- ![image-20220831131633830](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220831131633830.png)
 - **太阳系八大行星绕太阳公转的平面大多接近同一平面**
 
 #### 康德——拉普拉斯星云说
 
 - **太阳系是由一块*星云*在收缩形成的**，星云中的气体和尘埃在**引力作用下**向中心聚集，在圆盘中心聚集了星云绝大部分的质量。圆盘先形成的是太阳系中心的**太阳**，然后，剩余的星云物质进一步收缩演化，形成地球等**行星**
+  - 太阳是地球的最初能源，没有太阳，地球将没有生命。太阳能向外辐射的能量主要来自于太阳本身的**核聚变**
+
 - **星云**：是由**气体和尘埃物质**组成的**巨大云雾状天体**。直径大，可达十几光年
+- 康德—拉普拉斯星云说只是初步地说明了太阳系的起源问题，还有许多观测事实却难以用它来解释
 
 ### 4.2.2 恒星演化的过程
 
 - 恒星的**质量大小**决定了它的**寿命长短**
   - 质量越大，寿命越短
-  - 质量越小，寿命越长
-- 小质量恒星 → 红巨星(星体急剧扩大) → 行星状星云 → 白矮星(体积小密度高) → 黑矮星(肉眼看不见)
-- 大质量恒星 → 红超巨星 → 超新星 → 中子星(质量稍小的恒星)/黑洞(质量更大的恒星)
+  - 质量越小，其“燃料”消耗的越慢，寿命越长
+- **小质量恒星** → **红巨星**(星体急剧扩大) → 行星状星云 → **白矮星**(体积小密度高) → 黑矮星(肉眼看不见)
+- **大质量恒星** → **红超巨星** → **超新星** → **中子星**(质量稍小的恒星)/**黑洞**(质量更大的恒星)
 - **黑洞**不是洞，是一个**密度巨大**，**引力巨大**的天体，任何物质，甚至**光**都无法逃脱他的吸引
 
 ## 4.3 星系
 
 ### 4.3.1 星系的种类
 
-- **银河系**是由数千亿颗**恒星**和众多的**星云**组成
+- ***银河系***是由数千亿颗**恒星**和众多的**星云**组成
 - 在银河系外面，还有众多像银河系一样的星系，称为**河外星系**
 - 依据其外观形态分为
   - **椭圆星系**：比较年老的星系，只有少量的气体尘埃，年轻的恒星也很少
   - **螺旋星系**：有明显的盘状结构和旋臂，旋臂上的恒星诞生率很高，如银河系
-  - **不规则星系**：一般是混乱的，没有旋臂结构可能因星系之间发生碰撞，受到引力的作用而破坏变形
+  - **不规则星系**：可能曾经是椭圆星系或螺旋星系，一般是混乱的，没有旋臂结构可能因星系之间发生碰撞，受到引力的作用而破坏变形
 
 ### 4.3.2 银河系
 
-- 
+- **银河带**：从东北向西南横跨天空的云雾状的光带
+- 银河带全年都看得到，夏季（6月-10月）的夜空正好面对银河系的核心，所看到的“银河”就比较亮
+
+#### 银河系结构
+
+![银河系结构](https://i.ibb.co/nPvrhHb/image.png)
+
+- 银河系的恒星集中在一个**铁饼状**的空间内
+- **核球**：中间突出的部分
+- **银核**：核球的中部，四周是**银盘**
+- 银河系是个**螺旋星系**，银盘有**四个“旋臂”**结构
+- **太阳系位于银河系的一个旋臂上**，距离银河系中心约2.6万光年
 
 ### 4.3.2 天体系统和宇宙
 
-![image-20220831135259917](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220831135259917.png)
+![天体系统的层次](https://i.ibb.co/HVDx8gs/image.png)
+
+- 行星系 > 恒星系 > 星系 > 总星系
+- **地月系**：地球和月球组成的**行星系**
+  - 中心天体：地球【体积和质量比较大】
+- **太阳系**：银河系的一部分
+  - 中心天体：太阳【八大行星绕太阳公转】
+  - 太阳和其他恒星系、星云**绕着银河系的中心“银核”运动**
+- **总星系**【宇宙】：银河系和其他星系共同组成
+- **宇宙**是自然界所有**物质和能量的总和**
+
