--- a/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
+++ b/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
@@ -28,6 +28,8 @@
 
 - ![电磁铁](https://i.ibb.co/ZJ3JHH9/image.png)
 - ***电磁铁***：内部**插有铁芯的通电螺线管**
+  - 电磁铁的**铁芯用软铁**制做，而不能用钢制做。否则钢一旦被磁化后，将长期保持磁性而不能退磁，则其磁性的强弱就不能用电流的大小来控制，而失去电磁铁应有的优点
+
 - 电磁铁只有在通电的时候才具有磁性
 - 电磁铁的磁性与**螺线管的匝(za[1])数**、**通过线圈的电流大小**、**有无铁行**有关
 - 通过**控制变量法**进行实验
@@ -69,7 +71,13 @@
 #### 扬声器
 
 - 把**电信号**转换成**声信号**
+- 线圈不断来回震动，带动纸盆来回振动，扬声器就发出了声音
 - ![扬声器结构](https://i.ibb.co/G22C96H/image.png)
+
+#### 核磁共振成像
+
+- 中间的管道存在由电磁铁产生的强大磁场
+- 没有辐射
 
 #### 电磁继电器
 
