--- a/Science Notes/J2 Science Notes/11. 家庭用电.md
+++ b/Science Notes/J2 Science Notes/11. 家庭用电.md
@@ -135,6 +135,8 @@
 
 1. 鸟儿的电阻相较导线电阻较大，而电流会优先从电阻较小的地方流过，因此经过小鸟身体的电流非常微弱，微弱到根本无法伤害小鸟的身体
 
+
+
 - 电流是由移动的电子形成的，这些移动的电子会被电压驱使
 
 - 灯泡本身是一个用电器，会有很大的电阻，两端会有极大的电压差，流过灯泡的电流是很大的，因此鸟儿会触电
@@ -145,4 +147,9 @@
 
 - 由于小鸟站在一根高压线上，因此其身体可以看作是电路的一个支路，并且是与两爪子之间的导线并联的，由于其身体的电阻远远大于两爪子之间导线的电阻阻值，因此，根据中学物理电学中的欧姆定律可以求出经过小鸟身体的电流非常微弱，微弱到根本无法伤害小鸟的身体
 
+
+
 - 
+- 开关中的两个线头相碰不会引起短路或保险丝熔断
+  - 开关本身其实就是一条可以闭合、断开的导线，这条导线连接在火线与用电器之间。很显然，当我们“把开关里面的两个线头相碰”其实质就是“把开关闭合”而已！这样只会导致一个结果，那就是使其控制的用电器一直处于正常工作的状态，而不会导致任何短路现象发生
+
