--- a/Science Notes/J2 Science Notes/9. 指南针为什么能指南北.md
+++ b/Science Notes/J2 Science Notes/9. 指南针为什么能指南北.md
@@ -28,6 +28,9 @@
 - 区分两根外形完全相同的钢棒，其中的一根有磁性，另一根无磁性。
   - 将钢棒A的一端接触另一根钢棒B的中部，若吸力很大，则钢棒A有磁性，B无磁性；若吸力很弱，则钢棒B有磁性，A无磁性
   - 解析：钢棒的磁极在两端，磁性最弱的地方是中部，所以若吸力很大，则证明钢棒A的两端是磁极，钢棒A具有磁性
+- 所有的**磁体都能吸引钢**
+  - 普通钢的绝对多数成分还是铁，所以仍能导磁，能为磁铁吸引
+
 
 
 ### 9.1.3 磁化与去磁
@@ -117,5 +120,6 @@
 
 - 许多动物具有识别地磁场的能力
 -  这些动物体内含有磁性物质，帮他们认路
+-  例：鸽子在天空中飞翔时不会迷路是因为它们的头颅里有磁性细胞能起着导航作用
 - 外界“磁环境”对生物的生命活动有一定的影响
 
