--- a/Science Notes/J3 Science Notes/book2/1. 物种的多样性.md
+++ b/Science Notes/J3 Science Notes/book2/1. 物种的多样性.md
@@ -52,7 +52,7 @@
 - 大部分是**单细胞生物**
 - 例：细菌（有益：乳酸杆菌、有害：肉毒杆菌）
 - 似**植物**：具有**细胞壁**，可以进行**光合作用**，如衣藻等**单细胞藻类**
-- 似**动物**：如**变形虫**、**草履虫**等单细胞原生生物
+- 似**动物**：如**变形虫**、**草履虫**等单细胞原生生物，没有细胞壁
 - 既**像植物又像动物**：如**眼虫**，**有鞭毛能运动**，也有**叶绿体**可以**合成有机物**
 
 ### 真菌界
