--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -22,6 +22,7 @@
 - **真核细胞**的细胞在**分裂**时，**细胞核**中会出现***染色体***
   - 平时，细胞中存在着染色质，在**细胞分裂时**会改变形态
   - **染色体：一些易被碱性染料染成深色的圆柱状或杆状小体**
+  - 染色体由**DNA和蛋白质**组成
   
 - **同一物种**的不同生物个体之间，细胞中**染色体的数量和形态**几乎完全**相同**；**不同物种**的生物个体之间，细胞中**染色体的数量和形态**存在明显**差异**
 - 人的**每个体细胞**中都有**46条（23对）染色体**
@@ -199,5 +200,11 @@
 - 生物体的内部都在**不断进行物质和能量的转化**，能**与外界环境不断进行物质和能量的交换**（例：光合作用 & 呼吸作用）
 - *生物在具有**多样性**的同时，还具有**统一性***
 
+## 例题
 
+![image-20220901201123258](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220901201123258.png)
+
+
+
+![image-20220901204007285](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220901204007285.png)
 
