--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -87,6 +87,9 @@
   - **鸟类**的性染色体与哺乳动物不同，雄性有两个相同的性染色体（ZZ）；雌性有一对异形性染色体（ZW）
 - 例题1：某家庭连续出了7个儿子，下一胎儿子/女儿机率大？
   - 一样
+- 总结
+  - 精子的性染色体为X或Y，卵子的性染色体为X。如果卵子与具有X染色体的精子结合，子代是女性；如果卵子与具有Y染色体的精子结合，子代则是男性
+
 
 
 ### 2.2.2 基因和DNA
@@ -156,6 +159,11 @@
 
 - 原因：**控制皮肤黑色素合成的基因**发生了改变，动物皮肤由于缺乏黑色素而百化
 
+##### 血友病（有害）
+
+- 血友病通常是因为来自父母不具功能的**X染色体**
+- 因缺乏足够的凝血蛋白（凝血因子）而导致血液无法正常凝结
+
 ##### 癌症（有害）
 
 
@@ -208,3 +216,4 @@
 
 ![image-20220901204007285](C:\Users\wongj\Documents\Typora\School Notes\Science Notes\J3 Science Notes\book2\image-20220901204007285.png)
 
+`by jiahuiiiii @ 1st Sept 2022 21:28`
