--- a/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
+++ b/Science Notes/J3 Science Notes/book2/3. 生物的演化.md
@@ -97,3 +97,7 @@
 2. 基因和染色体等**遗传物质的变异**是生物演化的基础
 3. **自然选择决定演化的方向**，生物对环境的适应性是长期自然选择的结果
 4. **隔离导致新物种的形成**。长期的地理隔离使一个物种分化成多个亚种，亚种在各自不同的环境下进一步隔离，可能会形成新的物种
+
+
+
+`by jiahuiiiii @ 1st Sept 2022 21:28`
