--- a/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
+++ b/Science Notes/J3 Science Notes/book2/2. 生命的统一性.md
@@ -16,7 +16,8 @@
 
 ### 2.1.2 染色体与生物的遗传有关
 
-- **希波克拉底**发现精液中有**精子**，让女性受孕的是精子
+- **希波克拉底**猜测精液中有**精子**，让女性受孕的是精子
+- **哈姆**发现精液有小个体
 - **列文虎克**发明**显微镜**，**证明精子**的存在
 - 精子和卵子像其他细胞一样，只具有细胞膜、细胞质、细胞核等结构，并没有丝毫人的形象
 - **真核细胞**的细胞在**分裂**时，**细胞核**中会出现***染色体***
