--- a/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
+++ b/Science Notes/J2 Science Notes/10. 电生磁和磁生电.md
@@ -102,11 +102,58 @@
 
 - 通电导线在磁场中将受到力的作用，力的方向与电流方向及磁场方向有关
 - **电动机**正是利用这一原理制成的
-  - 电脑 ——> 机械能
+  - 电能 ——> 机械能
 
 ## 10.3 电磁感应
 
 - ***电磁感应***（磁生电）：**闭合电路**的一**<u>部分</u>导体**在磁场中做**切割磁场线**的运动时，导体中会**产生电流**【***感应电流***】
 -  利用这个原理可制成**发电机**
   - 机械能 ——> 电能
-- 
+## 10.4 发电机
+
+### 10.4.1 发电机的工作原理 && ### 10.4.2 交流电和直流电
+
+- ***发电机*** 由 **磁体** 和 **线圈** 组成
+- **交流电发电机**
+  - **线圈** 转动一周， 电流方向改变 **2** 次
+  - **周期性变化** 的电流成为交流电
+  -  交流电 1s 内重复的完整变化过程成为 **交流电的频率** 单位为赫兹 符号位 **Hz**
+- **直流电发电机**
+  - 2 **圆环** --> 2 半圆**换向器**
+  - 线圈产生**交流电** ，但向外输出的是 **直流电**
+- 家庭电路大多用交流电器
+- 直流电电器注意 "+" "-" 分别与电源的正，负极连接
+
+### 10.4.3 不同类型的发电机
+
+- 发电机中
+  - 机壳内固定的部分称为 **定子**
+  - 转动的部分称为 **转子**
+  - 旋转 **磁极** --> 旋转磁极发电机
+  - 旋转 **线圈** --> 旋转线圈发电机
+ - 发电机磁场来源
+  - 永磁发电机 --> 磁场来自永久磁铁
+  - 励磁发电机 --> 磁场来自通电线圈
+
+## 10.5 电磁感应现象的广泛应用
+
+### 10.5.1 动圈式麦克风
+- 结构与扬声器类似， 线圈在磁场中移动
+- 因此产生 **感应电流**
+- 感应电流的 **方向** 和 **大小** 随膜片的震动而变化
+- 声波 --> 电信号 (电流很小) --> 可用电子器件将它增强放大
+
+### 10.5.2 电吉他
+- 电吉他的声音通过 **电磁拾音装置** 连接扬声器
+- 弦震动时，产生 **感应电流**
+- 感应电流 --> 放大器 --> 扬声器 --> 发出声音
+
+### 10.5.3 自动石英手表
+- 可以存电， 持续工作数十天
+- 手臂摆动时，通过齿轮转动，使磁性转自高速转动， 产生 **感应电流** 
+
+### 电磁感应式震动电缆
+- 收到外力作用下而震动时，会在两颗磁体中切割磁场
+- 电磁感应 --> 电信号 --> 触发报警电路报警
+
+`10.4 to 10.5 by 学渣 @ 2st Sept 2022 12：15`
